// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationAmount /> should render a string as amount 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="align-middle checkboxLabel"
    >
      <span
        id="automation-text-1"
      >
        Automation
      </span>
    </div>
    <div
      class="amountContainer"
    >
      <i>
        Amount
      </i>
    </div>
  </div>
</div>
`;

exports[`<AutomationAmount /> should render formatted amount number without discount 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="checkbox"
    >
      <label
        class="label label"
        for="5"
      >
        <input
          class="input"
          id="5"
          name="5"
          type="checkbox"
        />
        <div
          class="align-middle checkboxLabel"
        >
          <span
            id="automation-text-5"
          >
            Automation
          </span>
        </div>
      </label>
    </div>
    <div
      class="amountContainer"
    >
      <div
        class="amountWrapper amount amountDisabled"
      >
        <span
          class="amount"
        >
          <b>
            $45,612
          </b>
           
          / 
          month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationAmount /> should render formatted numbers as amount 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="checkbox"
    >
      <label
        class="label label"
        for="2"
      >
        <input
          class="input"
          id="2"
          name="2"
          type="checkbox"
        />
        <div
          class="align-middle checkboxLabel"
        >
          <span
            id="automation-text-2"
          >
            Automation
          </span>
        </div>
      </label>
    </div>
    <div
      class="amountContainer"
    >
      <div
        class="amountWrapper amount amountDisabled"
      >
        <span
          class="amount"
        >
          <span
            class="fullAmount"
          >
            $91,224
          </span>
          <wbr />
          <b>
            $45,612
          </b>
           
          / 
          month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationAmount /> should render no addon when plan doesn't include one 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="align-middle checkboxLabel"
    >
      Automation
    </div>
    <div
      class="amountContainer"
    >
      <i>
        Unavailable
      </i>
    </div>
  </div>
</div>
`;

exports[`<AutomationAmount /> should render not editable variant 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="align-middle checkboxLabel"
    >
      Automation
    </div>
    <div
      class="amountContainer"
    >
      <div
        class="amountWrapper amount"
      >
        <span
          class="amount"
        >
          <span
            class="fullAmount"
          >
            $4,000
          </span>
          <wbr />
          <b>
            $2,000
          </b>
           
          / 
          month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationAmount /> should render with abbreviated plan interval 1`] = `
<div>
  <div
    class="automationRow"
  >
    <div
      class="checkbox"
    >
      <label
        class="label label"
        for="8"
      >
        <input
          class="input"
          id="8"
          name="8"
          type="checkbox"
        />
        <div
          class="align-middle checkboxLabel"
        >
          <span
            id="automation-text-8"
          >
            Automation
          </span>
        </div>
      </label>
    </div>
    <div
      class="amountContainer"
    >
      <div
        class="amountWrapper amount amountDisabled"
      >
        <span
          class="amount"
        >
          <span
            class="fullAmount"
          >
            $91,224
          </span>
          <wbr />
          <b>
            $45,612
          </b>
           
          / 
          mo
        </span>
      </div>
    </div>
  </div>
</div>
`;
